big push of a lot of the main things

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ var wins = 0;
 var losses = 0;
 var guessesLeft = 10;
 var maxGuesses = 10;
+var guessesMade=[];
+
 
 // Referencing the variables to the html
 var directionsText = document.getElementById("directions-text");
@@ -53,10 +55,16 @@ var guessesMadeText = document.getElementById("guesses-made")
 // global scope for the computers key choice
 var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
 
+//function which pushes guesses into the array
+// function guessesArray(){
+//     userGuess.push(guessesArray);
+// };
+
 // If the user runs out of guesses, this function is to reset the score
 
 function resetScore(){
     guessesLeft = maxGuesses;
+    var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
 }; 
 
 
@@ -67,8 +75,11 @@ function resetScore(){
 // This function is run when user presses a key...to guess a keyboard character
 document.onkeyup = function(event) {
    
+
+
 //    When the user presses a key, they lose one of their 10 guesses
    guessesLeft--;
+    
 
 //    Determine which key is being pressed
     
@@ -81,12 +92,14 @@ document.onkeyup = function(event) {
 
     if (userGuess === computerGuess) {
         wins++;
-        resetScore;
-
+        resetScore();
+        console.log(computerGuess, "ifwinbefore");
+        computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
+        console.log(computerGuess, "ifwinn");
         // guessesLeft--;
     } else if (guessesLeft ===0) {
         losses++;
-        resetScore;
+        resetScore();
         // guessesLeft--;
     };
 
@@ -109,9 +122,9 @@ guessesMadeText.textContent = "Guesses you have made: " + userGuess;
 
 }
 
-if (guessesLeft === 0){
-    resetScore;
-}
+// if (guessesLeft === 0){
+//     resetScore;
+
 
 </script>
 
